hphp/hack/test/typecheck/parse_int_with_underscore_bad3.php.exp
File "parse_int_with_underscore_bad3.php", line 5, characters 17-18:
A hexadecimal literal needs at least one digit. (Parsing[1002])
